# TraceMind

./: .env.example  .gitattributes  .gitignore  README.md  answer_general_query.py  answer_product_query.py  backup.yaml  chunk.py  config.py  del_bank_by_handbook.py  generate_catalog.py  generate_handbook_name.py  handbook_name_gemini.json  interface.py  llm_judge_result.py  milvus-backup  milvus-docker-compose.yml  pipeline.py  pipline.py  preprocess.py  prompts.py  pyproject.toml  query_classification.py  retriever.py  submit.py  utils.py
artifacts/: query_classification_results.json
assets/: playground.html
catalog/: chinese_handbook_catalog.json  english_handbook_catalog.json
docs/: TraceMind技术改造路线图.md  多轮澄清闭环设计.md  技术方案.md
scripts/: __init__.py  build_kb.py  chunk.py  del_bank_by_handbook.py  generate_catalog.py  generate_handbook_name.py  llm_judge_result.py  preprocess.py  submit.py
submission/: submit_all_top_k=19_use_query_cls=True_handbook_knowledge_bank_test.csv  submit_all_top_k=19_use_query_cls=True_handbook_knowledge_bank_test_0.795.csv  submit_all_top_k=19_use_query_cls=True_handbook_knowledge_bank_test_0.8025.csv  submit_all_top_k=19_use_query_cls=True_handbook_knowledge_bank_test_0.8075.csv  submit_all_top_k=19_use_query_cls=True_handbook_knowledge_bank_test_0.80875.csv  submit_all_top_k=19_use_query_cls=True_handbook_knowledge_bank_test_0.83875.csv  submit_all_top_k=19_use_query_cls=True_handbook_knowledge_bank_test_0.84125.csv  submit_all_top_k=19_use_query_cls=True_handbook_knowledge_bank_test_1.csv  (+7 more)
tracemind/: __init__.py  api.py  utils.py  (+14 more)
(+148 files in other folders)
